@@ -10,9 +10,20 @@ import com.vietravel.booking.domain.repository.tour.TourRepository;
 import com.vietravel.booking.web.dto.tour.TourCalendarMonth;
 import com.vietravel.booking.web.dto.tour.TourPublicDetailView;
 import com.vietravel.booking.web.dto.tour.TourPublicListItem;
+import com.vietravel.booking.domain.elasticsearch.TourDocument;
+import com.vietravel.booking.domain.elasticsearch.TourSearchRepository;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.elasticsearch.client.elc.NativeQuery;
+import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
+import org.springframework.data.elasticsearch.core.SearchHit;
+import org.springframework.data.elasticsearch.core.SearchHits;
+import org.springframework.data.elasticsearch.core.query.Query;
+import co.elastic.clients.elasticsearch._types.SortOrder;
+import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
+import co.elastic.clients.elasticsearch._types.query_dsl.QueryBuilders;
+import co.elastic.clients.json.JsonData;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -30,13 +41,20 @@ public class TourPublicService {
 
      private final TourRepository tourRepository;
      private final DepartureRepository departureRepository;
+     private final TourSearchRepository tourSearchRepository;
+     private final ElasticsearchOperations elasticsearchOperations;
 
-     public TourPublicService(TourRepository tourRepository, DepartureRepository departureRepository) {
+     public TourPublicService(
+               TourRepository tourRepository,
+               DepartureRepository departureRepository,
+               TourSearchRepository tourSearchRepository,
+               ElasticsearchOperations elasticsearchOperations) {
           this.tourRepository = tourRepository;
           this.departureRepository = departureRepository;
+          this.tourSearchRepository = tourSearchRepository;
+          this.elasticsearchOperations = elasticsearchOperations;
      }
 
-     @SuppressWarnings("null")
      @Transactional(readOnly = true)
      public Page<TourPublicListItem> search(
                String q,
@@ -51,44 +69,128 @@ public class TourPublicService {
                String sort,
                int page,
                int size) {
-          String normQ = (q == null || q.isBlank()) ? null : q.trim();
-          List<Long> tourIds = null;
+
+          BoolQuery.Builder boolQueryBuilder = new BoolQuery.Builder();
+
+          // Only active tours
+          boolQueryBuilder.must(QueryBuilders.term(t -> t.field("isActive").value(true)));
+
+          // Keyword search
+          if (q != null && !q.isBlank()) {
+               boolQueryBuilder.must(QueryBuilders.multiMatch(m -> m
+                         .fields("title", "summary", "categoryNames", "destinationNames")
+                         .query(q)
+                         .fuzziness("AUTO")));
+          }
+
+          // Filters
+          if (categoryId != null) {
+               boolQueryBuilder.filter(QueryBuilders.term(t -> t.field("categoryIds").value(categoryId)));
+          }
+          if (tourLineId != null) {
+               boolQueryBuilder.filter(QueryBuilders.term(t -> t.field("tourLineId").value(tourLineId)));
+          }
+          if (startLocationId != null) {
+               boolQueryBuilder.filter(QueryBuilders.term(t -> t.field("startLocationId").value(startLocationId)));
+          }
+          if (destinationId != null) {
+               boolQueryBuilder.filter(QueryBuilders.term(t -> t.field("destinationIds").value(destinationId)));
+          }
+          if (transportModeId != null) {
+               boolQueryBuilder.filter(QueryBuilders.term(t -> t.field("transportModeId").value(transportModeId)));
+          }
+
+          // Price range
+          if (minPrice != null || maxPrice != null) {
+               boolQueryBuilder.filter(QueryBuilders.range(r -> {
+                    r.field("basePrice");
+                    if (minPrice != null)
+                         r.gte(JsonData.of(minPrice));
+                    if (maxPrice != null)
+                         r.lte(JsonData.of(maxPrice));
+                    return r;
+               }));
+          }
+
+          // Date filter (requires JPA lookup for now as dates are in Departures)
           if (date != null) {
-               tourIds = departureRepository.findTourIdsByStartDate(date);
+               List<Long> tourIds = departureRepository.findTourIdsByStartDate(date);
                if (tourIds == null || tourIds.isEmpty()) {
-                    return new PageImpl<>(List.<TourPublicListItem>of(), PageRequest.of(page, size), 0);
+                    return new PageImpl<>(List.of(), PageRequest.of(page, size), 0);
                }
+               boolQueryBuilder.filter(QueryBuilders.terms(t -> t.field("id").terms(v -> v.value(
+                         tourIds.stream().map(co.elastic.clients.elasticsearch._types.FieldValue::of).collect(Collectors.toList())))));
           }
 
-          List<Tour> tours = tourRepository.findForPublic(
-                    normQ,
-                    categoryId,
-                    tourLineId,
-                    startLocationId,
-                    destinationId,
-                    transportModeId,
-                    minPrice,
-                    maxPrice,
-                    tourIds);
+          NativeQuery query = NativeQuery.builder()
+                    .withQuery(boolQueryBuilder.build()._toQuery())
+                    .withPageable(PageRequest.of(page, size))
+                    .build();
 
-          Map<Long, List<LocalDate>> upcomingMap = buildUpcomingMap(tours, date);
+          // Sorting
+          applySorting(query, sort);
 
-          Comparator<Tour> comparator = buildComparator(sort, upcomingMap);
-          if (comparator != null) {
-               tours = tours.stream().sorted(comparator).toList();
+          SearchHits<TourDocument> searchHits = elasticsearchOperations.search(query, TourDocument.class);
+          List<Long> tourIds = searchHits.getSearchHits().stream()
+                    .map(hit -> hit.getContent().getId())
+                    .collect(Collectors.toList());
+
+          // Build upcoming map for the found tours
+          Map<Long, List<LocalDate>> upcomingMap = buildUpcomingMapByIds(tourIds, date);
+
+          List<TourPublicListItem> items = searchHits.getSearchHits().stream()
+                    .map(hit -> toListItemFromDoc(hit.getContent(), upcomingMap.getOrDefault(hit.getContent().getId(), List.of())))
+                    .collect(Collectors.toList());
+
+          return new PageImpl<>(items, PageRequest.of(page, size), searchHits.getTotalHits());
+     }
+
+     private void applySorting(NativeQuery query, String sort) {
+          String key = (sort == null || sort.isBlank()) ? "newest" : sort;
+          switch (key) {
+               case "price-asc" -> query.addSort(org.springframework.data.domain.Sort.by(org.springframework.data.domain.Sort.Direction.ASC, "basePrice"));
+               case "price-desc" -> query.addSort(org.springframework.data.domain.Sort.by(org.springframework.data.domain.Sort.Direction.DESC, "basePrice"));
+               case "newest" -> query.addSort(org.springframework.data.domain.Sort.by(org.springframework.data.domain.Sort.Direction.DESC, "id"));
+               // "nearest" sorting is complex in ES without departure dates in the doc.
+               // For now, we use default relevance or id-desc.
+          }
+     }
+
+     private Map<Long, List<LocalDate>> buildUpcomingMapByIds(List<Long> tourIds, LocalDate date) {
+          if (tourIds == null || tourIds.isEmpty()) {
+               return Map.of();
+          }
+          LocalDate from = date != null ? date : LocalDate.now();
+          List<Departure> deps = departureRepository.findUpcomingByTourIds(tourIds, from);
+
+          Map<Long, List<LocalDate>> map = new LinkedHashMap<>();
+          for (Departure d : deps) {
+               if (d.getTour() == null || d.getTour().getId() == null) {
+                    continue;
+               }
+               Long id = d.getTour().getId();
+               map.computeIfAbsent(id, k -> new ArrayList<>()).add(d.getStartDate());
           }
 
-          int total = tours.size();
-          int from = Math.min(page * size, total);
-          int to = Math.min(from + size, total);
-          List<Tour> pageTours = from >= to ? List.of() : tours.subList(from, to);
+          map.replaceAll((k, v) -> v.stream().distinct().collect(Collectors.toList()));
+          return map;
+     }
 
-          Map<Long, List<LocalDate>> pageUpcoming = filterUpcomingMap(pageTours, upcomingMap);
-          List<TourPublicListItem> items = pageTours.stream()
-                    .map(t -> toListItem(t, pageUpcoming.getOrDefault(t.getId(), List.of())))
-                    .toList();
-
-          return new PageImpl<>(items, PageRequest.of(page, size), total);
+     private TourPublicListItem toListItemFromDoc(TourDocument doc, List<LocalDate> dates) {
+          TourPublicListItem r = new TourPublicListItem();
+          r.setId(doc.getId());
+          r.setSlug(doc.getSlug());
+          r.setTitle(doc.getTitle());
+          r.setCode(doc.getCode());
+          r.setDurationDays(doc.getDurationDays());
+          r.setDurationNights(doc.getDurationNights());
+          r.setBasePrice(doc.getBasePrice());
+          r.setTourLineName(doc.getTourLineName());
+          r.setStartLocationName(doc.getStartLocationName());
+          r.setTransportModeName(doc.getTransportModeName());
+          r.setThumbnailUrl(doc.getThumbnailUrl());
+          r.setDepartureDates(dates == null ? List.of() : dates);
+          return r;
      }
 
      private Comparator<Tour> buildComparator(String sort, Map<Long, List<LocalDate>> upcomingMap) {
@@ -194,17 +296,10 @@ public class TourPublicService {
                LocalDate from = ym.atDay(1);
                LocalDate to = ym.atEndOfMonth();
                List<Departure> deps = departureRepository.findForCalendar(tourId, from, to);
-               Map<LocalDate, BigDecimal> priceMap = new HashMap<>();
-               Map<LocalDate, BigDecimal> priceChildMap = new HashMap<>();
+               Map<LocalDate, Departure> depMap = new HashMap<>();
                for (Departure d : deps) {
-                    if (d.getStartDate() == null || d.getPriceAdult() == null) {
-                         continue;
-                    }
-                    priceMap.merge(d.getStartDate(), d.getPriceAdult(),
-                              (a, b) -> a.compareTo(b) <= 0 ? a : b);
-                    if (d.getPriceChild() != null) {
-                         priceChildMap.merge(d.getStartDate(), d.getPriceChild(),
-                                   (a, b) -> a.compareTo(b) <= 0 ? a : b);
+                    if (d.getStartDate() != null) {
+                         depMap.put(d.getStartDate(), d);
                     }
                }
 
@@ -212,15 +307,15 @@ public class TourPublicService {
                m.setYear(ym.getYear());
                m.setMonth(ym.getMonthValue());
                m.setLabel("Tháng " + ym.getMonthValue() + "/" + ym.getYear());
-               m.setDays(buildMonthDays(ym, priceMap, priceChildMap));
+               m.setDays(buildMonthDaysWithDeparture(ym, depMap));
                res.add(m);
           }
           return res;
      }
 
-     private List<TourCalendarMonth.CalendarDay> buildMonthDays(YearMonth ym,
-               Map<LocalDate, BigDecimal> priceMap,
-               Map<LocalDate, BigDecimal> priceChildMap) {
+     // Hàm mới: buildMonthDaysWithDeparture
+     private List<TourCalendarMonth.CalendarDay> buildMonthDaysWithDeparture(YearMonth ym,
+               Map<LocalDate, Departure> depMap) {
           List<TourCalendarMonth.CalendarDay> days = new ArrayList<>();
           LocalDate firstDay = ym.atDay(1);
           int shift = firstDay.getDayOfWeek().getValue() - DayOfWeek.MONDAY.getValue();
@@ -230,6 +325,7 @@ public class TourPublicService {
           LocalDate gridStart = firstDay.minusDays(shift);
 
           DecimalFormat df = new DecimalFormat("#,###");
+
           for (int i = 0; i < 42; i++) {
                LocalDate d = gridStart.plusDays(i);
                TourCalendarMonth.CalendarDay cd = new TourCalendarMonth.CalendarDay();
@@ -237,9 +333,10 @@ public class TourPublicService {
                cd.setDay(d.getDayOfMonth());
                cd.setInMonth(d.getMonthValue() == ym.getMonthValue());
 
-               BigDecimal price = priceMap.get(d);
-               BigDecimal priceChild = priceChildMap.get(d);
-               if (price != null && cd.isInMonth()) {
+               Departure dep = depMap.get(d);
+               if (dep != null && cd.isInMonth()) {
+                    BigDecimal price = dep.getPriceAdult();
+                    BigDecimal priceChild = dep.getPriceChild();
                     BigDecimal kPrice = price.divide(new BigDecimal(1000), 0, RoundingMode.HALF_UP);
                     cd.setAvailable(true);
                     cd.setPriceAdult(price);
@@ -249,6 +346,15 @@ public class TourPublicService {
                          cd.setPriceChild(priceChild);
                          cd.setPriceChildLabel(df.format(kChildPrice) + "K");
                     }
+                    cd.setCapacity(dep.getCapacity());
+                    // Lấy số đã đặt thực tế từ DB
+                    Integer booked = departureRepository.sumBookedByDepartureId(dep.getId());
+                    cd.setBooked(booked != null ? booked : 0);
+                    // Slots hiển thị cho khách
+                    int bookedInt = booked != null ? booked : 0;
+                    int capInt = dep.getCapacity() != null ? dep.getCapacity() : 0;
+                    cd.setSlotsTotal(capInt);
+                    cd.setSlotsAvailable(Math.max(0, capInt - bookedInt));
                } else {
                     cd.setAvailable(false);
                }
